iframe template fix 11

--- a/templates/payframe.html
+++ b/templates/payframe.html
@@ -84,15 +84,15 @@
                     backgroundColor: '#ffffff00',
                     bodyColor: 'white',
                     fontFamily: 'Montserrat',
-                    fontSize: '18px',
-                    cssClasses: 
+                    fontSize: '10px',
+                    cssClasses: `
                         .container {
                             padding-top: 10px;
                         }
                         .card {
                             background: #121212;
                         }
-                    
+                    `
                 };
                 lastPaymentData = {
                     mode: "production",
