iframe template fix 12

--- a/templates/payframe.html
+++ b/templates/payframe.html
@@ -26,7 +26,7 @@
             height="600"
             style="display: none;"
         ></iframe>
-        <div class="container d-flex justify-content-center align-items-center py-3 border-top">
+        <div class="container d-flex justify-content-center align-items-center pt-1 pb-3 border-top">
             <span class="text-muted px-2">Powered by Vyntec</span>
             <img 
               src="https://storage.googleapis.com/msgsndr/h9yc7BtsLVSheMdIWErB/media/67f6eb206dd5a5e6ce3cc545.png" 
@@ -84,7 +84,7 @@
                     backgroundColor: '#ffffff00',
                     bodyColor: 'white',
                     fontFamily: 'Montserrat',
-                    fontSize: '10px',
+                    fontSize: '18px',
                     cssClasses: `
                         .container {
                             padding-top: 10px;
