iframe template fix 14

--- a/templates/payframe.html
+++ b/templates/payframe.html
@@ -16,7 +16,7 @@
     {% bootstrap_css %}
 </head>
 <body style="background-color:#000000c7">
-    <div id="iframe_container" style="display: none;">
+    <div id="iframe_container" style="display: none; color:#fff">
         <p id="loading_message">Loading payment gateway...</p>
         <iframe
             id="payment_iframe"
